# relationscutter

./: .gitmodules  CMakeLists.txt  README.md  build.sh  build_debug.sh
src/: graph.hpp  main.cpp  parser.hpp  test.cpp
